--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: simulreturns
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Simulate and compute returns on investment projects
 Version: 0.1.0.9000
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author@R: person("Layal Christine", "Lettry", email = "layal.lettry@gmail.com")
+Maintainer: Layal Christine Lettry <layal.lettry@gmail.com>
+Description: Compute the final value of an investment project.
+        Simulate returns on stock investment. 
+        Simple tool for evaluating personal investment perspectives.
+URL: https://github.com/Layalchristine24/simulreturns
 Encoding: UTF-8
 LazyData: true
+Author: Layal Christine Lettry [aut, cre]
